syntax = "proto3";

package auth;

service AuthService {
  rpc BasicLogin(LoginRequest) returns (UserToken);
  rpc RegisterUserBasicLogin(RegisterBasicUserRequest) returns (UserToken);
  rpc BasicChangePassword(BasicChangePasswordRequest) returns (Empty);
  rpc DeleteUser(DeleteUserRequest) returns (Empty);
  rpc Me(UserToken) returns (User);
  rpc Logout(UserToken) returns (Empty);
  rpc LogoutUser(LogoutUserRequest) returns (Empty);
  rpc LogoutEveryone(UserToken) returns (Empty);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserToken {
  string token = 1;
}

message RegisterBasicUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message BasicChangePasswordRequest {
  string token = 1;
  string userId = 2;
  string newPassword = 3;
}

message DeleteUserRequest {
  string userId = 1;
}

message LogoutUserRequest {
  string userId = 1;
  string token = 2;
}

message Empty {}

message User {
  string uuid = 1;
  string name = 2;
  string createdAt = 3;
  string updatedAt = 4;
  bool isSuperuser = 5;
  optional string image = 6;
}
